# sending_notifications_app

./: .env.template  LICENSE  README.md  pyproject.toml
src/sending_notifications_app/: manage.py
src/sending_notifications_app/core/: tasks.py
src/sending_notifications_app/core/business/services/: __init__.py  client_service.py  mailing_service.py  statistic_service.py
src/sending_notifications_app/core/migrations/: 0001_initial.py
src/sending_notifications_app/core/models/: __init__.py  client.py  mailing.py  message.py
src/sending_notifications_app/core/presentation/: urls.py
src/sending_notifications_app/core/presentation/serializers/: __init__.py  client_serializer.py  mailing_serializer.py
src/sending_notifications_app/core/presentation/views/: __init__.py  client_view.py  mailing_view.py  statistic_view.py
src/sending_notifications_app/sending_notifications_app/: asgi.py  celery.py  logger_formater.py  settings.py  urls.py  wsgi.py
